# wigglecam-controller

./: .gitattributes  .gitignore  README.md  build.erc  build_sklib.py
docs/: design-rationale.md  human-review-checklist.md  plan.md  protocol.md  verification-report.md
enclosure/: README.md  board_dims.scad  control_pod.scad
enclosure/stl/: pod_back.stl  pod_front.stl
fab/: bom.csv  cpl.csv
fab/gerbers/: wigglecam-B_Cu.gbl  wigglecam-B_Mask.gbs  wigglecam-B_Silkscreen.gbo  wigglecam-Edge_Cuts.gm1  wigglecam-F_Cu.gtl  wigglecam-F_Mask.gts  wigglecam-F_Silkscreen.gto  wigglecam-In1_Cu.g1  wigglecam-In2_Cu.g2  wigglecam-drl_map.gbr  wigglecam-job.gbrjob  wigglecam.drl
firmware/: CMakeLists.txt  README.md
firmware/src/: board.h  encoder.c  encoder.h  flash_led.c  flash_led.h  i2c_slave.c  i2c_slave.h  ina219.c  ina219.h  main.c  registers.h  ws2812.c  ws2812.h  ws2812.pio
hardware/: board.json  drc-final.json  netlist.net  partlist.md
hardware/kicad/: wigglecam.dsn  wigglecam.kicad_pcb  wigglecam.kicad_pro  wigglecam.ses
hardware/kicad/wigglecam.pretty/: SW_TS-1187A_5.1x5.1mm.kicad_mod
hardware/scripts/: 01_make_board.py  02_route_critical.py  03_autoroute.py  04_cleanup.py  05_finish.py  05b_surgical.py  05c_enc_a.py  05d_bfs_route.py  05e_island_fix.py  05f_maze.py  05g_final.py  05h_final2.py  05i_last.py  06_fab.py  07_verify.py  08_enclosure_dims.py  drc.py  kcli.sh  kicad_common.py  render_svg.py
hardware/skidl/: build.py  build_sklib.py  circuit.py  parts.py
tools/: README.md
